--- a/bootstrap_test.html
+++ b/bootstrap_test.html
@@ -77,6 +77,7 @@
 			</div>
 		</div>
 
+		<div class="bar">new</div>
 		<!-- jQuery -->
 		<script src="http://code.jquery.com/jquery.js"></script>
 		<!-- Bootstrap JavaScript -->
